# arc_dslearn

./: .gitignore  .pre-commit-config.yaml  README.md  check_data_structure.py  count_tokens.py  dockerfile  ds_config_zero2.json  ds_config_zero3.json  evaluate_models.py  finetuning_script.py  fix_json_data.py  json_utils.py  make_eval_split.py  pilot.py  pilot_v2.py  pyproject.toml  requirements.txt  reward_fn.py  reward_fn_batched.py  rl_script.py  script.py  setup_and_train.sh  test_rl_reward.py  test_validity.py
.github/workflows/: ci.yml
arc_dsl/: dsl.py  solvers.py
src/: __init__.py
src/arc_dslearn/: __init__.py  evaluate_models.py  finetuning_script.py  json_utils.py  pilot.py  reward_fn.py  rl_script.py  test_rl_reward.py  token_count.py  utils.py
src/arc_dslearn/arc_dsl/: __init__.py  arc_types.py  constants.py  dsl.py  solvers.py
src/arc_dslearn/data_gene/: __init__.py  block_generation.py  cleanup.py  data_processing.py  generators.py  pilot.py
src/arc_dslearn/metrics_and_rewards/: __init__.py  reward_fn.py  test_rl_reward.py
src/arc_dslearn/model_eval/: __init__.py  evaluate_main.py  evaluate_models.py  evaluate_models_base.py  evaluate_models_finetuned.py  evaluate_rl_only.py  evaluate_sft_only.py  evaluate_sft_only_vllm.py
src/arc_dslearn/model_tuning/: __init__.py  finetuning_script.py  rl_script.py  rl_tuning.py  unsloth_finetuning_script.py  unsloth_rl_script.py
tests/: __init__.py  test_answer_overlap_unique.py  test_imports.py  test_pivot_readability.py  test_pivot_representation.py  test_pivot_validity.py
