[project]
name            = "arc-dslearn"
description     = "Train code-generation models to learn a DSL for solving ARC puzzles"
version         = "0.1.0"
authors         = [{name = "Axel D.", email = "axeldarmouni@gmail.com"}]
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "torch",
    "datasets",
    "transformers",
    "peft; sys_platform == 'linux'",
    "bitsandbytes; sys_platform == 'linux'",
    "accelerate; sys_platform == 'linux'",
    "trl; sys_platform == 'linux'",
    "unsloth; sys_platform == 'linux'",
    "tf-keras; sys_platform == 'linux'",
    "deepspeed; sys_platform == 'linux'",
    "pandas",
    "matplotlib",
    "huggingface-hub",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "ruff~=0.4",          # lint + format
    "pytest~=8.2",
    "hypothesis~=6.104",  # property-based tests for DSL functions
    "mypy~=1.10",
    "pre-commit~=3.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_dslearn"]

[tool.ruff]
line-length     = 100
preview         = true                              # enables Ruff formatter (auto-format)

[tool.ruff.lint]
extend-select   = ["B", "C4", "D", "I", "SIM"]     # flake-bugs, comprehension, docstrings, imports, similarities

[tool.ruff.lint.per-file-ignores]
"src/arc_dslearn/arc_dsl/arc_types.py" = ["F401"]
"src/arc_dslearn/arc_dsl/dsl.py" = ["C417", "SIM102", "C408", "C401", "C400", "D401", "D400", "D415", "F405", "F403", "E741", "D103", "D100", "I001", "F841"]  # Allow star imports and auto-generated code patterns for DSL solvers
"src/arc_dslearn/arc_dsl/solvers.py" = ["F405", "F403", "E741", "D103", "D100", "I001", "F841"]  # Allow star imports and auto-generated code patterns for DSL solvers

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts    = "-ra -q"
testpaths  = ["tests"]

[tool.mypy]
python_version     = "3.11"
strict             = true
ignore_missing_imports = true
exclude = ["^src/arc_dslearn/arc_dsl/"]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "peft.*",
    "trl.*",
    "accelerate.*",
    "datasets.*",
    "bitsandbytes.*",
    "deepspeed.*"
]
ignore_missing_imports = true
ignore_errors = true
